--- a/source/buoi2/Place rush order.fxml
+++ b/source/buoi2/Place rush order.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: #f4f4f4;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: #f4f4f4;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text fill="#6596d5" layoutX="105.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PLACE RUSH ORDER">
          <font>
@@ -311,7 +311,7 @@
                   </HBox>
                </content>
             </ScrollPane>
-            <Text fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="                                                                     (will delivery to normal address)" wrappingWidth="572.5367546081543" GridPane.columnIndex="2">
+            <Text fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="                                                                                   (will delivery to normal  delivery address)" wrappingWidth="572.5367546081543" GridPane.columnIndex="2">
                <font>
                   <Font name="System Italic" size="14.0" />
                </font>
